Remove generics from clients of scene library, where the generics in definitions have alreaady been removed.

--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,2 @@
-global.build.properties : ../../annotations/shared/global.build.properties
-user.build.properties: ../../annotations/shared/user.build.properties
+global.build.properties : ../annotation-tools/global.build.properties
+user.build.properties: ../annotation-tools/user.build.properties
