Renamed doc directory to talks. Creates scripts directory. Partially refactor buildfiles.

--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,3 @@
+workspace : ..
 global.build.properties : ../annotation-tools/global.build.properties
 user.build.properties: ../annotation-tools/user.build.properties
