--- a/tests/jolden/Makefile
+++ b/tests/jolden/Makefile
@@ -5,8 +5,9 @@
 
 SHELL = /bin/sh
 
-DIFFS := $(wildcard *.goal)
-DIFFS := $(patsubst %.goal, %.diff, $(DIFFS))
+DIFFS := $(patsubst %.goal, %.diff, $(wildcard *.goal))
+
+JAVARIFIER ?= ../../javarifier
 
 default : all
 
@@ -15,109 +16,109 @@ all : clean $(DIFFS) results
 
 # Display results of all .diff files.
 .PHONY: results
-results: VerifyDiffs.class
+results: ../VerifyDiffs.class
 	@echo ""
 	@echo "=== RESULTS ==="
 	@echo ""
-	@-java VerifyDiffs --show_all
+	@-java -cp .. VerifyDiffs --show_all
 
 # Remakes the little java program that checks and compares diffs
-VerifyDiffs.class : VerifyDiffs.java
-	@javac VerifyDiffs.java
+../VerifyDiffs.class : ../VerifyDiffs.java
+	${MAKE} -C .. VerifyDiffs.class
 
 # Actually runs the Javarifier to create the inferences.
 # For the jolden case study, explicitly list all the classes that need to be
 # analyzed for each program.
 voronoi.output:
 	cd voronoi && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/voronoi \
-	-output ${PWD}/voronoi.output \
+	${JAVARIFIER} \
+	-programCPEntries voronoi \
+	-output voronoi.output \
 	-outputFormat annotationIndexFile \
 	Edge EdgePair MyDouble Vec2 Vertex Voronoi 2>&1 \
-	| tee ${PWD}/voronoi.log
+	| tee voronoi.log
 
 health.output:
 	cd health && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/health \
-	-output ${PWD}/health.output \
+	${JAVARIFIER} \
+	-programCPEntries health \
+	-output health.output \
 	-outputFormat annotationIndexFile \
 	Health Hospital List Patient Results Village 2>&1 \
-	| tee ${PWD}/health.log
+	| tee health.log
 
 mst.output:
 	cd mst && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/mst \
-	-output ${PWD}/mst.output \
+	${JAVARIFIER} \
+	-programCPEntries mst \
+	-output mst.output \
 	-outputFormat annotationIndexFile \
 	BlueReturn Graph HashEntry Hashtable MST Vertex 2>&1 \
-	| tee ${PWD}/mst.log
+	| tee mst.log
 
 perimeter.output:
 	cd perimeter && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/perimeter \
-	-output ${PWD}/perimeter.output \
+	${JAVARIFIER} \
+	-programCPEntries perimeter \
+	-output perimeter.output \
 	-outputFormat annotationIndexFile \
 	BlackNode GreyNode NorthEast NorthWest Perimeter QuadTreeNode Quadrant \
 	SouthEast SouthWest WhiteNode 2>&1 \
-	| tee ${PWD}/perimeter.log
+	| tee perimeter.log
 
 em3d.output:
 	cd em3d && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/em3d \
-	-output ${PWD}/em3d.output \
+	${JAVARIFIER} \
+	-programCPEntries em3d \
+	-output em3d.output \
 	-outputFormat annotationIndexFile \
 	BiGraph Em3d Graph Node 2>&1 \
-	| tee ${PWD}/em3d.log
+	| tee em3d.log
 
 treeadd.output:
 	cd treeadd && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/treeadd \
-	-output ${PWD}/treeadd.output \
+	${JAVARIFIER} \
+	-programCPEntries treeadd \
+	-output treeadd.output \
 	-outputFormat annotationIndexFile \
 	TreeAdd TreeNode 2>&1 \
-	| tee ${PWD}/treeadd.log
+	| tee treeadd.log
 
 bh.output:
 	cd bh && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/bh \
-	-output ${PWD}/bh.output \
+	${JAVARIFIER} \
+	-programCPEntries bh \
+	-output bh.output \
 	-outputFormat annotationIndexFile \
 	BH Body Cell MathVector Node Tree 2>&1 \
-	| tee ${PWD}/bh.log
+	| tee bh.log
 
 tsp.output:
 	cd tsp && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/tsp \
-	-output ${PWD}/tsp.output \
+	${JAVARIFIER} \
+	-programCPEntries tsp \
+	-output tsp.output \
 	-outputFormat annotationIndexFile \
 	TSP Tree 2>&1 \
-	| tee ${PWD}/tsp.log
+	| tee tsp.log
 
 power.output:
 	cd power && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/power \
-	-output ${PWD}/power.output \
+	${JAVARIFIER} \
+	-programCPEntries power \
+	-output power.output \
 	-outputFormat annotationIndexFile \
 	Branch Demand Lateral Leaf Power Root 2>&1 \
-	| tee ${PWD}/power.log
+	| tee power.log
 
 bisort.output:
 	cd bisort && javac -g *.java
-	javarifier \
-	-programCPEntries ${PWD}/bisort \
-	-output ${PWD}/bisort.output \
+	${JAVARIFIER} \
+	-programCPEntries bisort \
+	-output bisort.output \
 	-outputFormat annotationIndexFile \
 	BiSort Value 2>&1 \
-	| tee ${PWD}/bisort.log
+	| tee bisort.log
 
 # Compare the output of the Javarifier and the goal file.
 %.diff: %.output %.goal
