--- a/tests/jolden/Makefile
+++ b/tests/jolden/Makefile
@@ -7,7 +7,7 @@ SHELL = /bin/sh
 
 DIFFS := $(patsubst %.goal, %.diff, $(wildcard *.goal))
 
-JAVARIFIER ?= ../../javarifier
+JAVARIFIER ?= ../../scripts/javarifier
 
 default : all
 
