Start to unify Makefiles

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -18,7 +18,7 @@ JAVARIFIER ?= ../scripts/javarifier
 default : all
 
 .PHONY: all
-all : compile $(DIFFS) jolden htmlparser tinySQL eclipsec results
+all : $(DIFFS) jolden htmlparser tinySQL eclipsec results
 
 
 ## I'm hoping this is not necessary, because a change to any file then
@@ -89,10 +89,11 @@ VerifyDiffs.class : VerifyDiffs.java
 %.output: %.class
 	${JAVARIFIER} \
 	-programCPEntries . \
-	-output ./$*.output \
+	-output $@ \
 	-outputFormat annotationIndexFile \
 	-outputMainClassFirst \
-	$* 2>&1 | tee ./$*.log
+	$* \
+	2>&1 | tee $*.log
 
 # Compare the output of the Javarifier and the goal file.
 %.diff: %.goal %.output
