javarifier uses CHECKERS path (and have build.xml run-tests pass it)

--- a/build.xml
+++ b/build.xml
@@ -254,6 +254,7 @@
       <arg value="${javarifier}/tests"/>
       <env key="JAVAC" file="${annotations-compiler}/dist/bin/javac" />
       <env key="CLASSPATH" path="${toString:libpath}"/>
+      <env key="CHECKERS" path="${checkers}"/>
     </exec>
   </target>
 
