--- a/build.xml
+++ b/build.xml
@@ -255,7 +255,7 @@
       <env key="JAVAC" file="${annotations-compiler}/dist/bin/javac" />
       <env key="CLASSPATH" path="${toString:libpath}"/>
       <env key="CHECKERS" path="${checkers}"/>
-      <env key="JAVA_HOME" path="${JAVA_HOME}"/>
+      <env key="JAVA_HOME" path="${env.JAVA_HOME}"/>
     </exec>
   </target>
 
