Improve Javarifier tests. Put Javarifier output in *.jaif, not *.output. Add tests for insert-annotations-to-source. Improve clean target at top level:  it now descends into tests directory. Use -classpath instead of -cp (jdb doesn't support -cp, and this change   makes the java and jdb command lines more similar). Remove .class files from repository (not sure why they are there).

--- a/.hgignore
+++ b/.hgignore
@@ -6,14 +6,15 @@ javarifier.jar
 TAGS
 *~
 
+tests/annotated
 tests/*.class
 tests/**/*.class
 tests/*.diff
 tests/**/*.diff
 tests/*.log
 tests/**/*.log
-tests/*.output
-tests/**/*.output
+tests/*.jaif
+tests/**/*.jaif
 sootOutput
 bin/**/*.class
 
