--- a/tests/jolden/Makefile
+++ b/tests/jolden/Makefile
@@ -27,7 +27,7 @@ results: ../VerifyDiffs.class
 # Actually runs the Javarifier to create the inferences.
 # For the jolden case study, explicitly list all the classes that need to be
 # analyzed for each program.
-voronoi.output: ../../javarifier.jar
+voronoi.jaif: ../../javarifier.jar
 	cd voronoi && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries voronoi \
@@ -36,7 +36,7 @@ voronoi.output: ../../javarifier.jar
 	Edge EdgePair MyDouble Vec2 Vertex Voronoi \
 	2>&1 | tee voronoi.log
 
-health.output: ../../javarifier.jar
+health.jaif: ../../javarifier.jar
 	cd health && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries health \
@@ -45,7 +45,7 @@ health.output: ../../javarifier.jar
 	Health Hospital List Patient Results Village \
 	2>&1 | tee health.log
 
-mst.output: ../../javarifier.jar
+mst.jaif: ../../javarifier.jar
 	cd mst && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries mst \
@@ -54,7 +54,7 @@ mst.output: ../../javarifier.jar
 	BlueReturn Graph HashEntry Hashtable MST Vertex \
 	2>&1 | tee mst.log
 
-perimeter.output: ../../javarifier.jar
+perimeter.jaif: ../../javarifier.jar
 	cd perimeter && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries perimeter \
@@ -64,7 +64,7 @@ perimeter.output: ../../javarifier.jar
 	SouthEast SouthWest WhiteNode \
 	2>&1 | tee perimeter.log
 
-em3d.output: ../../javarifier.jar
+em3d.jaif: ../../javarifier.jar
 	cd em3d && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries em3d \
@@ -73,7 +73,7 @@ em3d.output: ../../javarifier.jar
 	BiGraph Em3d Graph Node \
 	2>&1 | tee em3d.log
 
-treeadd.output: ../../javarifier.jar
+treeadd.jaif: ../../javarifier.jar
 	cd treeadd && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries treeadd \
@@ -82,7 +82,7 @@ treeadd.output: ../../javarifier.jar
 	TreeAdd TreeNode \
 	2>&1 | tee treeadd.log
 
-bh.output: ../../javarifier.jar
+bh.jaif: ../../javarifier.jar
 	cd bh && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries bh \
@@ -91,7 +91,7 @@ bh.output: ../../javarifier.jar
 	BH Body Cell MathVector Node Tree \
 	2>&1 | tee bh.log
 
-tsp.output: ../../javarifier.jar
+tsp.jaif: ../../javarifier.jar
 	cd tsp && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries tsp \
@@ -100,7 +100,7 @@ tsp.output: ../../javarifier.jar
 	TSP Tree \
 	2>&1 | tee tsp.log
 
-power.output: ../../javarifier.jar
+power.jaif: ../../javarifier.jar
 	cd power && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries power \
@@ -109,7 +109,7 @@ power.output: ../../javarifier.jar
 	Branch Demand Lateral Leaf Power Root \
 	2>&1 | tee power.log
 
-bisort.output: ../../javarifier.jar
+bisort.jaif: ../../javarifier.jar
 	cd bisort && javac -g *.java
 	${JAVARIFIER} \
 	-programCPEntries bisort \
@@ -119,8 +119,8 @@ bisort.output: ../../javarifier.jar
 	2>&1 | tee bisort.log
 
 # Compare the output of the Javarifier and the goal file.
-%.diff: %.goal %.output
-	-diff -u $*.goal $*.output > $*.diff 2>&1
+%.diff: %.goal %.jaif
+	-diff -u $*.goal $*.jaif > $*.diff 2>&1
 
 # Remove all .diff, .log files from the tests directory,
 # and all output from the javarifierOutput directory.
@@ -128,4 +128,4 @@ bisort.output: ../../javarifier.jar
 clean :
 	rm -f *.diff
 	rm -f *.log
-	rm -f *.output
+	rm -f *.jaif
